styles.css
@font-face {
  font-family: lust-display;
  src: url("fonts/lust-display-regular.otf") format("opentype");
}

:root {
  --base-transition-duration: 0.3s;

  --hue: 220;
  --tertiary-hue: calc(var(--hue) + 300);
  --accent-hue: calc(var(--hue) + 80);

  --primary-color: hsl(var(--hue), 50%, 90%);
  --pre-primary-color: hsla(var(--hue), 50%, 95%, 20%);
  --secondary-color: hsl(var(--hue), 50%, 10%);
  --tertiary-color: hsl(var(--tertiary-hue), 80%, 20%);
  --accent-color: hsl(var(--accent-hue), 80%, 80%);

  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  height: 100%;
  overflow: hidden;
  caret-color: transparent;
  overscroll-behavior: none;
  touch-action: none;

  /* Because of how CSS filters work, we need to do this custom */
  /* It must be refreshed if the hue changes with https://codepen.io/sosuke/pen/Pjoqqp with a loss <= 0.3 */
  .option:focus .focus-only-background {
    filter: invert(7%) sepia(26%) saturate(1480%) hue-rotate(182deg) brightness(64%) contrast(97%);
  }

  .option > span {
    text-shadow: 2px 2px 1px black;
  }

  .container {
    background-image: url('images/light-background.jpg');
  }

  &.dark {
    --primary-color: hsl(var(--hue), 50%, 10%);
    --pre-primary-color: hsla(var(--hue), 50%, 15%, 30%);
    --secondary-color: hsl(var(--hue), 50%, 90%);
    --tertiary-color: hsl(var(--tertiary-hue), 80%, 80%);
    --accent-color: hsl(var(--accent-hue), 80%, 20%);
  
    .option:focus .focus-only-background {
      filter: invert(93%) sepia(2%) saturate(1833%) hue-rotate(189deg) brightness(96%) contrast(98%);
    }

    .option > span {
      text-shadow: none;
    }
  
    .container {      
      background-image: url('images/dark-background.jpg');
    }
  }
}

body {
  height: 100%;
  overflow: hidden;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  line-height: 1.6;
  margin: 0;
  padding: 0;
}

/* Scrollbar */
::-webkit-scrollbar {
	width: 6px;
}

::-webkit-scrollbar-track {
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0,0.3);
}

::-webkit-scrollbar-thumb {
	background: var(--primary-color);
}

a:not(.fa) {
  color: var(--accent-color);

  h3 & {
    color: var(--primary-color);
  }

  &:hover {
    color: var(--accent-color);
  }
}

h3 {
  border: 1px solid var(--primary-color);
  border-radius: 2px;
  width: fit-content;
  padding: 6px 12px;

  a {
    text-decoration: none;
  }

  .fa {
    margin-left: 8px;
    font-size: 18px;
  }
}

.container {
  display: flex;
  flex: 1 1 0;
  flex-direction: row;

  /** This gets overriden once the videos have loaded. */
  opacity: 0;

  transition: all 0.5s ease;
  overflow: hidden;
  height: 100%;
  width: 100%;

  background-size: cover;
  background-position: bottom center;
}

.audio-toggle, .dark-toggle {
  position: absolute;
  display: flex;
  bottom: 20px;
  z-index: 3;
  background-color: var(--secondary-color);
  border-radius: 50%;
  border: none;

  cursor: pointer;

  padding: 8px;
  opacity: 0.7;
  transition: opacity 0.3s ease;

  &:hover {
    opacity: 1;
  }

  svg {
    width: 24px;
    height: 24px;
    fill: var(--primary-color);
  } 
}

.audio-toggle {
  right: 20px;
}

.dark-toggle {
  right: 80px;
}

.hidden-on-mobile {
  @media screen and (max-width: 767px) {
    display: none !important;
  }
}
/* ... */

